Revision history for ack

1.06    Tue Mar 28 08:37:02 CST 2006
        [FIXES]
        * Now handles filenames that start with ">" or "<".
        * Failing to open a file is now a warning, instead of fatal.

1.04    Wed Jan 25 22:51:11 CST 2006
        [ENHANCEMENTS]
        * Now skips blib and RCS as well as CVS and .svn directories.
        * Added support for Python and Ruby.

1.02    Wed Dec 14 13:13:19 CST 2005
        [FIXES]
        * Fixed a mind-blowingly dumb bug.  The --all flag would search
          no files at all.

1.00    Wed Dec  7 09:30:25 CST 2005
        [ENHANCEMENTS]
        * Added support for finding C programs (--cc)

        * Removed the --only option.  It's now smart enough to know
          that if, for example, you say --perl, you only want Perl stuff,
          and that if you say --noperl, you want everything BUT Perl.

        * Removed the --exec option, which is irrelevant if you use
          xargs like you should.  I added --exec before I understood what
          xargs did.

0.90    Fri Dec  2 11:12:44 CST 2005
        First version, released on an unsuspecting world.  It's been
        used at FLR for years, but I'm now releasing it in the wild.
