@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         ack
-version:      1.06
+version:      1.08
 version_from: Ack.pm
 installdirs:  site
 requires:
